--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/node": "^16.11.68",
         "@vitejs/plugin-vue": "^3.1.2",
         "@vue/eslint-config-typescript": "^11.0.0",
+        "@vue/test-utils": "^2.2.4",
         "@vue/tsconfig": "^0.1.3",
         "autoprefixer": "^10.4.13",
         "cypress": "^10.10.0",
